[package]
name = "voicevox-client"
description = "Unofficial voicevox engine wrapper"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/voicevox-client/rust"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
reqwest = { version = "0.11.16", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

[dev-dependencies]
tokio = { version = "1.27.0", features = ["full"] }
